--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,6 +17,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/GameSpec.js"></script>
   <script type="text/javascript" src="spec/AIAlgorithmSpec.js"></script>
+  <script type="text/javascript" src="spec/ComputerMethodsSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
