--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="src/Player.js"></script>
     <script type="text/javascript" src="src/Game.js"></script>
     <script type="text/javascript" src="src/Computer.js"></script>
+    <script type="test/javascript" src="src/Gameplay.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
@@ -26,8 +27,8 @@
 <body>
             <p>Hello world! Welcome to tic-tac-toe.</p>
 <div id="container">
- <div class="row"><div class="boardPiece" id="0">  </div><div class="boardPiece" id="1"></div><div class="boardPiece" id="2"></div></div>
+ <div class="row"><div class="boardPiece cross" id="0">  </div><div class="boardPiece" id="1"></div><div class="boardPiece" id="2"></div></div>
  <div class="row"><div class="boardPiece" id="3">  </div><div class="boardPiece" id="4"></div><div class="boardPiece" id="5"></div></div>
- <div class="row"><div class="boardPiece" id="6">  </div><div class="boardPiece" id="7"></div><div class="boardPiece" id="8"></div></div></div>
+ <div class="row"><div class="boardPiece" id="6">  </div><div class="boardPiece circle" id="7"></div><div class="boardPiece" id="8"></div></div></div>
         </body>
         </html>
