--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,8 +16,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/GameSpec.js"></script>
-  <script type="text/javascript" src="spec/AIAlgorithmSpec.js"></script>
-  <script type="text/javascript" src="spec/ComputerMethodsSpec.js"></script>
+  <script type="text/javascript" src="spec/ComputerSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
