--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,11 +10,13 @@
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/Player.js"></script>
   <script type="text/javascript" src="src/Game.js"></script>
+  <script type="text/javascript" src="src/Player.js"></script>
   <script type="text/javascript" src="src/Computer.js"></script>
+  <script type="text/javascript" src="src/Board.js"></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/BoardSpec.js"></script>
   <script type="text/javascript" src="spec/GameSpec.js"></script>
   <script type="text/javascript" src="spec/ComputerSpec.js"></script>
 
