--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="src/Player.js"></script>
     <script type="text/javascript" src="src/Game.js"></script>
     <script type="text/javascript" src="src/Computer.js"></script>
+    <script type="text/javascript" src="src/Board.js"></script>
     <script type="text/javascript" src="src/NewGame.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
@@ -26,7 +27,6 @@
 <body>
   <div id="heading">
     <div id="name">
-    <input type='text' id='playerName' placeholder='player1'></input>
   </div>
     <div id="move">
     <select id="firstMove">
