add two player mode
I created a two player mode to ensure that the game, player, and board
were not dependent on the computer class. I added acceptance tests to the two
player mode because I wanted to be sure that the computer isn't active or
taking turns when two player mode is selected.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <link rel="stylesheet" href="css/myStyles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     <script type="text/javascript" src="src/Player.js"></script>
     <script type="text/javascript" src="src/Game.js"></script>
     <script type="text/javascript" src="src/Computer.js"></script>
     <script type="text/javascript" src="src/Board.js"></script>
-    <script type="text/javascript" src="src/NewGame.js"></script>
+    <script type="text/javascript" src="src/TicTacToe.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
 </head>
 <body>
   <div id="heading">
