--- a/index.html
+++ b/index.html
@@ -1,55 +1,71 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+  <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+  <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+  <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title></title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="css/myStyles.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    <script type="text/javascript" src="src/Player.js"></script>
-    <script type="text/javascript" src="src/Game.js"></script>
-    <script type="text/javascript" src="src/Computer.js"></script>
-    <script type="text/javascript" src="src/Board.js"></script>
-    <script type="text/javascript" src="src/TicTacToe.js"></script>
-    <script src="js/plugins.js"></script>
-</head>
-<body>
-  <div id="heading">
-    <div id="mode">
-      <label> Game Mode: </label><select id="gameMode">
-        <option value="singlePlayer">Single Player</option>
-        <option value="twoPlayer">Two Player</option>
-      </select>
-  </div>
-  <div id="move">
-    <label> First Move: </label><select id="firstMove">
-              <option value="player1">Player 1</option>
-              <option value="player2">Player 2</option>
-            </select>
-          </div>
-          <div id="piece">
-          <label> First Player Piece: </label><select id="playerPiece">
-              <option value="X">X</option>
-              <option value="O">O</option>
-            </select>
-          </div>
-          <div id="new">
-            <button type='button' id='newGame'>Start a New Game</button>            
-          </div>
-        </div>
-<div id="container">
- <div class="row"><div class="boardPiece" id="space0">  </div><div class="boardPiece" id="space1"></div><div class="boardPiece" id="space2"></div></div>
- <div class="row"><div class="boardPiece" id="space3">  </div><div class="boardPiece" id="space4"></div><div class="boardPiece" id="space5"></div></div>
- <div class="row"><div class="boardPiece" id="space6">  </div><div class="boardPiece" id="space7"></div><div class="boardPiece" id="space8"></div></div></div>
-        </body>
-        </html>
+      <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+      <link rel="stylesheet" href="css/myStyles.css">
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/main.css">
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+      <script type="text/javascript" src="src/Player.js"></script>
+      <script type="text/javascript" src="src/Game.js"></script>
+      <script type="text/javascript" src="src/Computer.js"></script>
+      <script type="text/javascript" src="src/Board.js"></script>
+      <script type="text/javascript" src="src/TicTacToe.js"></script>
+      <script src="js/plugins.js"></script>
+  </head>
+  <body>
+    <div id="options">
+      <div id="mode" class="option">
+        <label> Mode: </label>
+        <select id="gameMode">
+          <option value="singlePlayer">Single Player</option>
+          <option value="twoPlayer">Two Player</option>
+        </select>
+      </div>
+      <div id="move" class="option">
+        <label> First Move: </label>
+        <select id="firstMove">
+          <option value="player1">Player 1</option>
+          <option value="player2">Player 2</option>
+        </select>
+      </div>
+      <div id="piece" class="option">
+        <label> Player Piece: </label>
+        <select id="playerPiece">
+          <option value="X">X</option>
+          <option value="O">O</option>
+        </select>
+      </div>
+      <div id="new" class="option">
+        <button type='button' id='newGame'>New Game</button>
+      </div>
+    </div>
+    <div id="game">
+      <div class="row">
+        <div class="boardPiece" id="space0"></div>
+        <div class="boardPiece" id="space1"></div>
+        <div class="boardPiece" id="space2"></div>
+      </div>
+      <div class="row">
+        <div class="boardPiece" id="space3"></div>
+        <div class="boardPiece" id="space4"></div>
+        <div class="boardPiece" id="space5"></div>
+      </div>
+      <div class="row">
+        <div class="boardPiece" id="space6"></div>
+        <div class="boardPiece" id="space7"></div>
+        <div class="boardPiece" id="space8"></div>
+      </div>
+    </div>
+  </body>
+</html>
